2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: New file.
	* amandad-src/amandad.h: New file.
	* amandad-src/amandad_util.c: New file, add function init_g_options
				      parse_g_options.
	* amandad-src/Makefile.am: New file.
	* client-src/amandad.c: Removed file.
	* client-src/amandad.h: Removed file.
	* client-src/client_util.c (init_g_options, parse_g_options): Remove.
	* client-src/client_util.h (init_g_options, parse_g_options): Remove.
	* client-src/Makefile.am (INCLUDES): -I$(top_srcdir)/amandad-src
	* client-src/Makefile.am (libexec_PROGRAMS): Remove amandad.
	* client-src/Makefile.am (LDADD): Add
				  ../amandad-src/libamandad.$(LIB_EXTENSION).
	* client-src/selfcheck.c: #include "amandad.h".
	* client-src/sendsize.c: #include "amandad.h".
	* configure.in (AC_CONFIG_FILES): amandad-src/Makefile.
	* Makefile.am (SUBDIRS): amandad-src.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* docs/security-api.txt: Document security_read_sync.
	* common-src/security.h: Typo.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/amandad.c (service_new): Pass the "amandad" argument to
					      the service.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Allow to run many services on the same
				     client. Cleanup.
	* common-src/rsh-security.c: Ditto.
	* common-src/ssh-security.c: Ditto.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security.h (security_stream_read_sync): Prototype.
	* common-src/bsd-security.c (bsd_stream_read_sync): New function.
	* common-src/krb4-security.c (krb4_stream_read_sync): New function.
	* common-src/krb5-security.c (krb5_stream_read_sync): New function.
	* common-src/rsh-security.c (rsh_stream_read_sync): New function.
	* common-src/ssh-security.c (ssh_stream_read_sync): New function.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>