@@ -3,7 +3,8 @@
 INCLUDES =	-I$(top_builddir)/common-src \
 		-I$(top_srcdir)/common-src   \
 		-I$(top_srcdir)/restore-src  \
-		-I$(top_srcdir)/tape-src
+		-I$(top_srcdir)/tape-src     \
+		-I$(top_srcdir)/amandad-src
 
 lib_LTLIBRARIES = 	libamserver.la
 LIB_EXTENSION = la
@@ -39,6 +40,14 @@ libamserver_la_LDFLAGS= -release $(VERSION)
 
 LDADD = ../common-src/libamanda.$(LIB_EXTENSION) \
 	libamserver.$(LIB_EXTENSION) \
+	../tape-src/libamtape.$(LIB_EXTENSION) \
+	../common-src/libamanda.$(LIB_EXTENSION) \
+	../tape-src/libamtape.$(LIB_EXTENSION) \
+	../common-src/libamanda.$(LIB_EXTENSION)
+
+amindexd_LDADD = ../common-src/libamanda.$(LIB_EXTENSION) \
+	libamserver.$(LIB_EXTENSION) \
+	../amandad-src/libamandad.$(LIB_EXTENSION) \
 	../tape-src/libamtape.$(LIB_EXTENSION) \
 	../common-src/libamanda.$(LIB_EXTENSION) \
 	../tape-src/libamtape.$(LIB_EXTENSION) \
